// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rating should render Rating component 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "gap": 4,
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="16"
    bbWidth="16"
    fill="none"
    focusable={false}
    height="16"
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 16,
          "width": 16,
        },
      ]
    }
    vbHeight={32}
    vbWidth={32}
    width="16"
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0.5,
              -865972,
              0.5,
              -865972,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="a"
          x1="0%"
          x2="100%"
          y1="0%"
          y2="0%"
        />
      </RNSVGDefs>
      <RNSVGPath
        d="M20.388 10.918L32 12.118l-8.735 7.749L25.914 31.4l-9.893-6.088L6.127 31.4l2.695-11.533L0 12.118l11.547-1.2L16.026.6l4.362 10.318z"
        fill={
          {
            "brushRef": "a",
            "type": 1,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="16"
    bbWidth="16"
    fill="none"
    focusable={false}
    height="16"
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 16,
          "width": 16,
        },
      ]
    }
    vbHeight={32}
    vbWidth={32}
    width="16"
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0.5,
              -865972,
              0.5,
              -865972,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="a"
          x1="0%"
          x2="100%"
          y1="0%"
          y2="0%"
        />
      </RNSVGDefs>
      <RNSVGPath
        d="M20.388 10.918L32 12.118l-8.735 7.749L25.914 31.4l-9.893-6.088L6.127 31.4l2.695-11.533L0 12.118l11.547-1.2L16.026.6l4.362 10.318z"
        fill={
          {
            "brushRef": "a",
            "type": 1,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="16"
    bbWidth="16"
    fill="none"
    focusable={false}
    height="16"
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 16,
          "width": 16,
        },
      ]
    }
    vbHeight={32}
    vbWidth={32}
    width="16"
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0.5,
              -865972,
              0.5,
              -865972,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="a"
          x1="0%"
          x2="100%"
          y1="0%"
          y2="0%"
        />
      </RNSVGDefs>
      <RNSVGPath
        d="M20.388 10.918L32 12.118l-8.735 7.749L25.914 31.4l-9.893-6.088L6.127 31.4l2.695-11.533L0 12.118l11.547-1.2L16.026.6l4.362 10.318z"
        fill={
          {
            "brushRef": "a",
            "type": 1,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="16"
    bbWidth="16"
    fill="none"
    focusable={false}
    height="16"
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 16,
          "width": 16,
        },
      ]
    }
    vbHeight={32}
    vbWidth={32}
    width="16"
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0.5,
              -865972,
              0.5,
              -865972,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="a"
          x1="0%"
          x2="100%"
          y1="0%"
          y2="0%"
        />
      </RNSVGDefs>
      <RNSVGPath
        d="M20.388 10.918L32 12.118l-8.735 7.749L25.914 31.4l-9.893-6.088L6.127 31.4l2.695-11.533L0 12.118l11.547-1.2L16.026.6l4.362 10.318z"
        fill={
          {
            "brushRef": "a",
            "type": 1,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="16"
    bbWidth="16"
    fill="none"
    focusable={false}
    height="16"
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 16,
          "width": 16,
        },
      ]
    }
    vbHeight={32}
    vbWidth={32}
    width="16"
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0.5,
              -865972,
              0.5,
              -865972,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="a"
          x1="0%"
          x2="100%"
          y1="0%"
          y2="0%"
        />
      </RNSVGDefs>
      <RNSVGPath
        d="M20.388 10.918L32 12.118l-8.735 7.749L25.914 31.4l-9.893-6.088L6.127 31.4l2.695-11.533L0 12.118l11.547-1.2L16.026.6l4.362 10.318z"
        fill={
          {
            "brushRef": "a",
            "type": 1,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`Rating should render Rating component with value is a decimal number 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "gap": 4,
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="20"
    bbWidth="20"
    fill="none"
    focusable={false}
    height="20"
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 20,
          "width": 20,
        },
      ]
    }
    vbHeight={32}
    vbWidth={32}
    width="20"
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0.5,
              -865972,
              0.5,
              -865972,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="a"
          x1="0%"
          x2="100%"
          y1="0%"
          y2="0%"
        />
      </RNSVGDefs>
      <RNSVGPath
        d="M20.388 10.918L32 12.118l-8.735 7.749L25.914 31.4l-9.893-6.088L6.127 31.4l2.695-11.533L0 12.118l11.547-1.2L16.026.6l4.362 10.318z"
        fill={
          {
            "brushRef": "a",
            "type": 1,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="20"
    bbWidth="20"
    fill="none"
    focusable={false}
    height="20"
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 20,
          "width": 20,
        },
      ]
    }
    vbHeight={32}
    vbWidth={32}
    width="20"
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0.5,
              -865972,
              0.5,
              -865972,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="a"
          x1="0%"
          x2="100%"
          y1="0%"
          y2="0%"
        />
      </RNSVGDefs>
      <RNSVGPath
        d="M20.388 10.918L32 12.118l-8.735 7.749L25.914 31.4l-9.893-6.088L6.127 31.4l2.695-11.533L0 12.118l11.547-1.2L16.026.6l4.362 10.318z"
        fill={
          {
            "brushRef": "a",
            "type": 1,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="20"
    bbWidth="20"
    fill="none"
    focusable={false}
    height="20"
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 20,
          "width": 20,
        },
      ]
    }
    vbHeight={32}
    vbWidth={32}
    width="20"
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0.5,
              -865972,
              0.5,
              -6710887,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="a"
          x1="0%"
          x2="100%"
          y1="0%"
          y2="0%"
        />
      </RNSVGDefs>
      <RNSVGPath
        d="M20.388 10.918L32 12.118l-8.735 7.749L25.914 31.4l-9.893-6.088L6.127 31.4l2.695-11.533L0 12.118l11.547-1.2L16.026.6l4.362 10.318z"
        fill={
          {
            "brushRef": "a",
            "type": 1,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="20"
    bbWidth="20"
    fill="none"
    focusable={false}
    height="20"
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 20,
          "width": 20,
        },
      ]
    }
    vbHeight={32}
    vbWidth={32}
    width="20"
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0.5,
              -6710887,
              0.5,
              -6710887,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="a"
          x1="0%"
          x2="100%"
          y1="0%"
          y2="0%"
        />
      </RNSVGDefs>
      <RNSVGPath
        d="M20.388 10.918L32 12.118l-8.735 7.749L25.914 31.4l-9.893-6.088L6.127 31.4l2.695-11.533L0 12.118l11.547-1.2L16.026.6l4.362 10.318z"
        fill={
          {
            "brushRef": "a",
            "type": 1,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="20"
    bbWidth="20"
    fill="none"
    focusable={false}
    height="20"
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 20,
          "width": 20,
        },
      ]
    }
    vbHeight={32}
    vbWidth={32}
    width="20"
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0.5,
              -6710887,
              0.5,
              -6710887,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="a"
          x1="0%"
          x2="100%"
          y1="0%"
          y2="0%"
        />
      </RNSVGDefs>
      <RNSVGPath
        d="M20.388 10.918L32 12.118l-8.735 7.749L25.914 31.4l-9.893-6.088L6.127 31.4l2.695-11.533L0 12.118l11.547-1.2L16.026.6l4.362 10.318z"
        fill={
          {
            "brushRef": "a",
            "type": 1,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
